Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/users/admin_change_password.xhtml
+++ b/src/main/webapp/admin/users/admin_change_password.xhtml
@@ -7,9 +7,9 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/resources/template/template.xhtml">
+    <ui:composition template="/admin/users/admin_view_user.xhtml">
 
-        <ui:define name="content">
+        <ui:define name="users">
 
 
             <h:panelGroup  rendered="#{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin }" >
