--- a/src/main/webapp/admin/users/admin_user.xhtml
+++ b/src/main/webapp/admin/users/admin_user.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/admin/users/admin_view_user.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="users">
 
                 <f:view>
 
