--- a/src/main/webapp/admin/users/admin_user_department.xhtml
+++ b/src/main/webapp/admin/users/admin_user_department.xhtml
@@ -12,9 +12,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/admin/users/admin_view_user.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="users">
 
                 <h:panelGroup rendered="#{not webUserController.hasPrivilege('AdminManagingUsers') and not sessionController.firstLogin}" >
                     <h:outputLabel value="You are NOT authorized"/>
