--- a/src/main/webapp/emr/reports/vmps.xhtml
+++ b/src/main/webapp/emr/reports/vmps.xhtml
@@ -17,7 +17,7 @@
                             <h5 class="card-title">Vmp Data</h5>
                             <div>
                                 <p:commandButton ajax="false" icon="pi pi-file-excel" title="Export to Excel">
-                                    <p:dataExporter type="xls" target="vmpTable" fileName="vmpData" />
+                                    <p:dataExporter type="xls" target="vmpsDataTable" fileName="vmpData" />
                                 </p:commandButton>
                             </div>
                         </div>
