--- a/src/main/webapp/emr/admin/diagnoses.xhtml
+++ b/src/main/webapp/emr/admin/diagnoses.xhtml
@@ -15,7 +15,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-5">
-                            <h:panelGrid columns="2"  class="w-100" >
+                            <h:panelGrid columns="3"  class="w-100" >
                                 <p:commandButton id="btnAdd"
                                                  value="Add" 
                                                  class="w-100"
@@ -25,13 +25,19 @@
                                 <p:commandButton id="btnDelete" 
                                                  ajax="false"
                                                  onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                            return false;" 
+                                                             return false;" 
                                                  class="w-100"
                                                  action="#{diagnosisController.delete()}" 
                                                  process="lstSelect btnDelete"
                                                  update="lstSelect gpDetail"
                                                  value="Delete">
                                 </p:commandButton>
+                                <p:commandButton 
+                                    value="Download as Excel" 
+                                    class="w-100"
+                                    ajax="false"
+                                    action="#{diagnosisController.downloadAsExcel}" />
+
                             </h:panelGrid>
 
                             <h:panelGrid id="gpSelect" class="w-100">
