--- a/src/main/webapp/emr/admin/investigations.xhtml
+++ b/src/main/webapp/emr/admin/investigations.xhtml
@@ -6,100 +6,96 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
-
-
     <ui:define name="subcontent">
+        <h:form >
+            <p:growl/>
+            <p:focus id="selectFocus" context="gpSelect"/>
+            <p:focus id="detailFocus" context="gpDetail"/>
+            <p:panel header="Manage Investigations">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h:panelGrid columns="3"  class="w-100" >
+                                <p:commandButton id="btnAdd"
+                                                 value="Add" 
+                                                 class="w-100"
+                                                 update="gpDetail lstSelect detailFocus" 
+                                                 action="#{investigationController.prepareAdd()}"  >
+                                </p:commandButton>
+                                <p:commandButton id="btnDelete" 
+                                                 ajax="false"
+                                                 onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                             return false;" 
+                                                 class="w-100"
+                                                 action="#{investigationController.delete()}" 
+                                                 process="lstSelect btnDelete"
+                                                 update="lstSelect gpDetail"
+                                                 value="Delete">
+                                </p:commandButton>
+                                <p:commandButton 
+                                    value="Download as Excel" 
+                                    class="w-100"
+                                    ajax="false"
+                                    action="#{investigationController.downloadAsExcelForEmr()}" />
 
-        <h:panelGroup >
-            <h:form id="form"  >
-                <p:growl />
+                            </h:panelGrid>
 
-                <p:panel header="Manage Investigation" >
+                            <h:panelGrid id="gpSelect" class="w-100">
+                                <p:selectOneListbox id="lstSelect" 
+                                                    filter="true"
+                                                    filterMatchMode="contains"
+                                                    scrollHeight="500"
+                                                    value="#{investigationController.current}">
+                                    <f:selectItems value="#{investigationController.items}" 
+                                                   var="myItem" 
+                                                   itemValue="#{myItem}" 
+                                                   itemLabel="#{myItem.name}"></f:selectItems>
+                                    <f:ajax render="gpDetail" execute="lstSelect">
+                                    </f:ajax>
+                                </p:selectOneListbox>
 
-                    <div class="row" >
-                        <div class="col-md-5" >
-                            <h:panelGrid id="gpSelect" columns="1"  >
-                                <p:panel header="Search Investigation" >
-                                    <h:panelGrid id="gpSelectText" >
+                            </h:panelGrid>
 
-                                        <p:inputText autocomplete="off" id="txtSearch" 
-                                                     value="#{investigationController.selectText}"
-                                                     class="w-100">
-                                            <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
-                                        </p:inputText>
-
-                                        <p:selectOneListbox converter="ixcon"   id="lstSelect"   value="#{investigationController.current}" style="min-width: 223px; height: 300px;" >
-                                            <f:selectItems  value="#{investigationController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                            <p:ajax event="change"   update="gpDetail" process="lstSelect" >
-                                            </p:ajax>
-                                        </p:selectOneListbox>
-
-
-                                    </h:panelGrid>
-                                    <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                        <p:commandButton id="btnAdd" ajax="false" value="Add" action="#{investigationController.prepareAdd()}" styleClass="buttons"  onclick="onSubmitButton();">
-                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail " execute="" >
-                                            </f:ajax>
-                                        </p:commandButton>
-                                        <p:commandButton id="btnDelete" ajax="false" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                    return false;" action="#{investigationController.delete()}"  value="Delete"  >
-                                        </p:commandButton>
-
-
-                                    </h:panelGrid>
-                                </p:panel>
-                            </h:panelGrid  >
                         </div>
-                        <div class="col-md-7" >
-                            <p:panel header="Edit Details">
-                                <f:facet name="header" >
-                                    <h:outputLabel value="Edit Details" ></h:outputLabel>
-                                    <p:commandButton style="float:right;" id="btnSave" value="Save"  
-                                                     action="#{investigationController.saveSelectedForEhr()}" 
-                                                     ajax="false"   >
-                                    </p:commandButton>
-                                </f:facet>
 
-                                <h:panelGrid id="gpDetail" columns="2" class="w-100">
-                                    <h:outputText id="lblName" value="Name" ></h:outputText>
-                                    <p:inputText autocomplete="off" id="txtName" 
-                                                 value="#{investigationController.current.name}" 
-                                                 required="true" 
-                                                 class="w-100"></p:inputText>
-                                    <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
-                                    <p:inputText 
-                                        autocomplete="off" 
-                                        id="txtAddress"  
+                        <div class="col-md-7">
 
-                                        value="#{investigationController.current.printName}"  
-                                        class="w-100"></p:inputText>
-                                    <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
-                                    <p:inputText autocomplete="off" 
-                                                 id="txtFullName"  
+                            <h:panelGroup id="gpDetail">
+                                <div class="form-group row">
+                                    <label for="txtName" class="col-sm-2 col-form-label">Name</label>
+                                    <div class="col-sm-10">
+                                        <p:inputText autocomplete="off" id="txtName" value="#{investigationController.current.name}" styleClass="form-control"></p:inputText>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="txtCode" class="col-sm-2 col-form-label">Code</label>
+                                    <div class="col-sm-10">
+                                        <p:inputText autocomplete="off" id="txtCode" value="#{investigationController.current.code}" styleClass="form-control"></p:inputText>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="txtDes" class="col-sm-2 col-form-label">Description</label>
+                                    <div class="col-sm-10">
+                                        <p:inputTextarea id="txtDes" value="#{investigationController.current.descreption}" styleClass="form-control"></p:inputTextarea>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-10">
+                                        <p:commandButton id="btnSave" 
+                                                         value="Save"
+                                                         process="gpDetail" 
+                                                         update="lstSelect selectFocus" 
+                                                         action="#{investigationController.saveSelected()}" >
+                                        </p:commandButton>
+                                    </div>
+                                </div>
+                            </h:panelGroup>
 
-                                                 value="#{investigationController.current.fullName}"  
-                                                 class="w-100"></p:inputText>
-                                    <p:outputLabel value="Item Code"/>
-                                    <p:inputText autocomplete="off" 
-                                                 id="txtCode"  
-                                                 value="#{investigationController.current.code}"
-                                                 class="w-100"/>
-                                </h:panelGrid>
-
-                            </p:panel>
                         </div>
                     </div>
-
-
-
-
-
-
-                </p:panel>
-            </h:form>
-
-        </h:panelGroup>
-
+                </div>
+            </p:panel>
+        </h:form>
 
 
     </ui:define>
