--- a/src/main/webapp/emr/admin/vocabularies.xhtml
+++ b/src/main/webapp/emr/admin/vocabularies.xhtml
@@ -19,7 +19,7 @@
                     <div class="row" >
                         <div class="col-md-5" >
                             <h:panelGroup id="gpSelect" >
-                                <h:panelGrid id="gpSelectButtons" columns="2"  class="w-100" >
+                                <h:panelGrid id="gpSelectButtons" columns="3"  class="w-100 p-2" >
                                     <p:commandButton id="btnAdd" 
                                                      value="Add" 
                                                      process="btnAdd"
@@ -35,6 +35,11 @@
                                                      action="#{vocabularyController.delete()}"  
                                                      value="Delete"  >
                                     </p:commandButton>
+                                    <p:commandButton 
+                                        value="Download as Excel" 
+                                        class="w-100"
+                                        ajax="false"
+                                        action="#{vocabularyController.downloadAsExcel}" />
                                 </h:panelGrid>
 
                                 <p:selectOneListbox  id="lstSelect"  
