--- a/src/main/webapp/emr/reports/amps.xhtml
+++ b/src/main/webapp/emr/reports/amps.xhtml
@@ -7,7 +7,8 @@
 
     <body>
 
-        <ui:composition template="/emr/reports_index.xhtml">
+        <ui:composition template="/emr/reports/index.xhtml">
+
 
             <ui:define name="subcontent">
                 <h:form >
@@ -36,9 +37,9 @@
                                 <p:column rendered="false" headerText="Code" filterBy="#{item.code}" filterMatchMode="contains" sortBy="#{item.code}">
                                     <h:outputText value="#{item.code}" />
                                 </p:column>
-                                
-                                 <p:column headerText="Vmp" filterBy="#{item.code}" filterMatchMode="contains" sortBy="#{item.code}">
-                                     <h:outputText value="#{item.vmp.name}" />
+
+                                <p:column headerText="Vmp" filterBy="#{item.code}" filterMatchMode="contains" sortBy="#{item.code}">
+                                    <h:outputText value="#{item.vmp.name}" />
                                 </p:column>
 
                             </p:dataTable>
