--- a/src/main/webapp/emr/reports/visits.xhtml
+++ b/src/main/webapp/emr/reports/visits.xhtml
@@ -8,7 +8,8 @@
 
     <body>
 
-        <ui:composition template="/emr/reports_index.xhtml">
+         <ui:composition template="/emr/reports/index.xhtml">
+
 
             <ui:define name="subcontent">
                 <h:form>
