--- a/src/main/webapp/emr/reports/vtms.xhtml
+++ b/src/main/webapp/emr/reports/vtms.xhtml
@@ -7,7 +7,7 @@
 
     <body>
 
-        <ui:composition template="/emr/reports_index.xhtml">
+        <ui:composition template="/emr/reports/index.xhtml">
 
             <ui:define name="subcontent">
                 <h:form >
