Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/users/admin_view_logins.xhtml
+++ b/src/main/webapp/admin/users/admin_view_logins.xhtml
@@ -10,7 +10,7 @@
 
         <ui:composition template="/admin/users/admin_manage_users.xhtml">
 
-            <ui:define name="users">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel id="panelReport" >
                         <f:facet name ="header" >
