--- a/src/main/webapp/emr/admin/plans.xhtml
+++ b/src/main/webapp/emr/admin/plans.xhtml
@@ -1,61 +1,99 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/emr/admin/index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
-
-
-    <ui:define name="content">
-
-
-        <h:form  >
-            <p:growl />
-            <p:focus id="selectFocus" context="gpSelect" />
-            <p:focus id="detailFocus" context="gpDetail" />
-
-
-
-            <p:panel header="Manage Plan of Actions" >
-
-                <div class="row" >
-                    <div class="col-md-5" >
-                        <h:panelGrid id="gpSelectText" >
-                            <p:selectOneListbox  id="lstSelect"   value="#{planController.current}" style="min-width: 223px; max-height: 400px;">
-                                <f:selectItems  value="#{planController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                <f:ajax render="gpDetail" execute="lstSelect" >
-                                </f:ajax>
-                            </p:selectOneListbox>
-                        </h:panelGrid>
-                        <h:panelGrid id="gpSelectButtons" columns="3"  >
-                            <p:commandButton id="btnAdd" value="Add" action="#{planController.prepareAdd()}" styleClass="buttons" update="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" onclick="onSubmitButton();" >
-                            </p:commandButton>
-                            <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                        return false;" action="#{planController.delete()}"  value="Delete"  >
-                            </p:commandButton>
-                        </h:panelGrid>
-                    </div>
-                    <div class="col-md-7" >
-                        <h:panelGrid id="gpDetail" columns="1">
-                            <h:panelGrid id="gpDetailText" columns="2">
-                                <h:outputText id="lblName" value="Name" ></h:outputText>
-                                <p:inputText autocomplete="off" id="txtName" value="#{planController.current.name}"  ></p:inputText>
-                                <h:outputText id="lblCode" value="Code" ></h:outputText>
-                                <p:inputText autocomplete="off" id="txtCode" value="#{planController.current.code}"  ></p:inputText>                                    
-                                <h:outputText id="lblDes" value="Description" ></h:outputText>
-                                <p:inputTextarea id="txtDes" value="#{planController.current.descreption}"  ></p:inputTextarea>
-                            </h:panelGrid>
-                            <h:panelGrid id="gpDetailButtons" columns="2">
-                                <p:commandButton id="btnSave" value="Save" action="#{planController.saveSelected()}" styleClass="buttons" update="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  process="gpDetail" onclick="onSubmitButton();" >
+    <ui:define name="subcontent">
+        <h:form >
+            <p:growl/>
+            <p:focus id="selectFocus" context="gpSelect"/>
+            <p:focus id="detailFocus" context="gpDetail"/>
+            <p:panel header="Manage Plans">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h:panelGrid columns="3"  class="w-100" >
+                                <p:commandButton id="btnAdd"
+                                                 value="Add" 
+                                                 class="w-100"
+                                                 update="gpDetail lstSelect detailFocus" 
+                                                 action="#{planController.prepareAdd()}"  >
                                 </p:commandButton>
+                                <p:commandButton id="btnDelete" 
+                                                 ajax="false"
+                                                 onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                             return false;" 
+                                                 class="w-100"
+                                                 action="#{planController.delete()}" 
+                                                 process="lstSelect btnDelete"
+                                                 update="lstSelect gpDetail"
+                                                 value="Delete">
+                                </p:commandButton>
+                                <p:commandButton 
+                                    value="Download as Excel" 
+                                    class="w-100"
+                                    ajax="false"
+                                    action="#{planController.downloadAsExcel}" />
+
                             </h:panelGrid>
-                        </h:panelGrid>
+
+                            <h:panelGrid id="gpSelect" class="w-100">
+                                <p:selectOneListbox id="lstSelect" 
+                                                    filter="true"
+                                                    filterMatchMode="contains"
+                                                    scrollHeight="500"
+                                                    value="#{planController.current}">
+                                    <f:selectItems value="#{planController.items}" 
+                                                   var="myItem" 
+                                                   itemValue="#{myItem}" 
+                                                   itemLabel="#{myItem.name}"></f:selectItems>
+                                    <f:ajax render="gpDetail" execute="lstSelect">
+                                    </f:ajax>
+                                </p:selectOneListbox>
+
+                            </h:panelGrid>
+
+                        </div>
+
+                        <div class="col-md-7">
+
+                            <h:panelGroup id="gpDetail">
+                                <div class="form-group row">
+                                    <label for="txtName" class="col-sm-2 col-form-label">Name</label>
+                                    <div class="col-sm-10">
+                                        <p:inputText autocomplete="off" id="txtName" value="#{planController.current.name}" styleClass="form-control"></p:inputText>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="txtCode" class="col-sm-2 col-form-label">Code</label>
+                                    <div class="col-sm-10">
+                                        <p:inputText autocomplete="off" id="txtCode" value="#{planController.current.code}" styleClass="form-control"></p:inputText>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="txtDes" class="col-sm-2 col-form-label">Description</label>
+                                    <div class="col-sm-10">
+                                        <p:inputTextarea id="txtDes" value="#{planController.current.descreption}" styleClass="form-control"></p:inputTextarea>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-10">
+                                        <p:commandButton id="btnSave" 
+                                                         value="Save"
+                                                         process="gpDetail" 
+                                                         update="lstSelect selectFocus" 
+                                                         action="#{planController.saveSelected()}" >
+                                        </p:commandButton>
+                                    </div>
+                                </div>
+                            </h:panelGroup>
+
+                        </div>
                     </div>
-
                 </div>
-
             </p:panel>
         </h:form>
 
