Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/reports/index.xhtml
+++ b/src/main/webapp/emr/reports/index.xhtml
@@ -35,12 +35,12 @@
                                                     </h:commandButton><!-- comment -->
                                                 </div>
                                             </p:tab>
-                                            <p:tab title="Clinic - Metadata">
+                                            <p:tab title="Clinical Metadata">
                                                 <div class="d-grid gap-2">
                                                     <h:commandButton value="Diagnosis" action="#{diagnosisController.navigateToListDiagnoses()}" styleClass="btn btn-primary mb-2" />
                                                 </div>
                                             </p:tab>
-                                            <p:tab title="Medicines">
+                                            <p:tab title="Pharmaceutical Metadata">
                                                 <div class="d-grid gap-2">
                                                     <h:commandButton value="Generic Names (VTMs)" action="#{vtmController.navigateToListAllVtms()}" styleClass="btn btn-primary mb-2" />
                                                     <h:commandButton value="Trade Names (ATMs)" action="#{atmController.navigateToListAllAtms()}" styleClass="btn btn-primary mb-2" />
