--- a/src/main/webapp/admin/staff/admin_manage_staff_index.xhtml
+++ b/src/main/webapp/admin/staff/admin_manage_staff_index.xhtml
@@ -24,7 +24,7 @@
                                         <p:commandButton  class="w-100" ajax="false" value="Consultant" action="#{navigationController.navigateToAdminDoctorConsultant()}"/>
                                         <p:commandButton  class="w-100" ajax="false" value="All Specialities" action="#{navigationController.navigateToAdminDoctorSpeciality()}"/>
                                         <p:commandButton  class="w-100" ajax="false" value="Staff" action="../../hr/hr_staff_admin"/>
-                                        <p:commandButton  class="w-100" ajax="false" value="View Staff Signatures" action="#{staffController.admin_staff_view_signature()}"/>
+                                        <p:commandButton  class="w-100" ajax="false" value="View Staff Signatures" action="#{navigationController.navigateToViewStaffSignatures()}"/>
                                         <p:commandButton  class="w-100" ajax="false" value="Add Signature for staff" action="#{navigationController.navigateToAdminStaffSignature()}"/>
                                         <p:commandButton  class="w-100" ajax="false" value="Connect staff to user" action="#{navigationController.navigateToAdminUserStaff()}"/>
                                         <p:commandButton  class="w-100" ajax="false" value="Staff List " action="#{navigationController.navigateToStaffList()}"/>
