--- a/src/main/webapp/admin/staff/admin_doctor.xhtml
+++ b/src/main/webapp/admin/staff/admin_doctor.xhtml
@@ -19,74 +19,86 @@
 
 
                 <p:panel header="Manage Doctor" >
-                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h:panelGrid id="gpSelect" >
+                                <h:panelGrid id="gpSelectButtons" columns="3"  class="w-100 p-2" >
+                                    <p:commandButton id="btnAdd" value="Add"  
+                                                     action="#{doctorController.prepareAdd()}" styleClass="buttons" ajax="false" class="w-100"/>                                   
+                                    <p:commandButton ajax="false" id="btnDelete" 
+                                                     onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                                 return false;" action="#{doctorController.delete()}"  value="Delete" class="w-100">
+                                    </p:commandButton>
+                                    <p:commandButton 
+                                        value="Download as Excel" 
+                                        class="w-100"
+                                        ajax="false"
+                                        action="#{doctorController.downloadAsExcel()}"
+                                        />
+                                </h:panelGrid>
 
-                        <h:panelGrid id="gpSelect" columns="1"  >
-                            <p:panel >
                                 <h:panelGrid id="gpSelectText" >
-                                    <p:inputText autocomplete="off" value="#{doctorController.selectText}" style="width:400px">
-                                        <f:ajax execute="@this" render="lstSelect" event="keyup" />
-                                    </p:inputText>
+                                    
 
-                                    <p:selectOneListbox  class="w-100" scrollHeight="500" id="lstSelect" value="#{doctorController.current}" style="min-width: 400px;">
+                                    <p:selectOneListbox  class="w-100" filterMatchMode="contains" scrollHeight="500" id="lstSelect" value="#{doctorController.current}" filter="true" style="min-width: 400px;">
                                         <f:selectItems  value="#{doctorController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.person.nameWithTitle}"  ></f:selectItems>
                                         <f:ajax render="gpDetail" execute="lstSelect" />                                        
                                     </p:selectOneListbox>
                                 </h:panelGrid>
-                                <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                    <p:commandButton id="btnAdd" value="Add"  
-                                                     action="#{doctorController.prepareAdd()}" styleClass="buttons" ajax="false"/>                                   
-                                    <p:commandButton ajax="false" id="btnDelete" 
-                                                     onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                                 return false;" action="#{doctorController.delete()}"  value="Delete">
-                                    </p:commandButton>
-                                </h:panelGrid>
 
+
+
+                            </h:panelGrid  >
+                        </div>
+                        <div class="col-md-7">
+                            <p:panel style="min-height: 600px">
+                                <h:panelGrid id="gpDetail" columns="1">
+                                    <h:panelGrid id="gpDetailText" columns="2">
+                                        <h:outputText  value="Name" />
+                                        <p:inputText autocomplete="off" value="#{doctorController.current.person.name}" style="width:400px" />
+                                        <h:outputText  value="Phone" />
+                                        <p:inputText  value="#{doctorController.current.person.phone}" style="width:400px" />
+                                        <h:outputText  value="Fax" />
+                                        <p:inputText autocomplete="off"  value="#{doctorController.current.person.fax}"  style="width:400px"/>
+                                        <h:outputText  value="Mobile" />
+                                        <p:inputText autocomplete="off" value="#{doctorController.current.person.mobile}" style="min-width: 400px;"  />
+                                        <h:outputText  value="Address" />
+                                        <p:inputText autocomplete="off" value="#{doctorController.current.person.address}" style="min-width: 400px;" />
+                                        <h:outputText  value="Code" />
+                                        <p:inputText autocomplete="off" value="#{doctorController.current.code}" style="min-width: 400px;"  />
+                                        <h:outputText value="Speciality" />
+                                        <h:selectOneListbox size="1" value="#{doctorController.current.speciality}" style="min-width: 400px;">
+                                            <f:selectItem itemLabel="Please select a speciality"/>
+                                            <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                        </h:selectOneListbox>
+                                        <h:outputText value="Registration" />
+                                        <p:inputText autocomplete="off" value="#{doctorController.current.registration}" style="min-width: 400px;"/>
+                                        <h:outputText value="Qualification" />
+                                        <p:inputText autocomplete="off"  value="#{doctorController.current.qualification}" style="min-width: 400px;"/>
+                                        <h:outputText  value="Refering Charge" />
+                                        <p:inputText autocomplete="off"  value="#{doctorController.current.charge}" style="min-width: 400px;" />
+                                        <h:outputText  value="Creater" />
+                                        <h:outputText  value="#{doctorController.current.creater.webUserPerson.name}" style="min-width: 400px;"/>
+                                        <h:outputText  value="Created At" />
+                                        <h:outputText  value="#{doctorController.current.createdAt}" >
+                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="yyyy MM dd hh:mm:ss a" ></f:convertDateTime>
+                                        </h:outputText>
+                                    </h:panelGrid>
+                                    <h:panelGrid id="gpDetailButtons" columns="2">
+                                        <p:commandButton id="btnSave" value="Save" ajax="false"
+                                                         action="#{doctorController.saveSelected()}" styleClass="buttons"/>
+
+                                        <p:defaultCommand target="btnSave"/>
+                                    </h:panelGrid>
+                                </h:panelGrid>
                             </p:panel>
-                        </h:panelGrid  >
+                        </div>
+                    </div>
 
-                        <p:panel style="min-height: 600px">
-                            <h:panelGrid id="gpDetail" columns="1">
-                                <h:panelGrid id="gpDetailText" columns="2">
-                                    <h:outputText  value="Name" />
-                                    <p:inputText autocomplete="off" value="#{doctorController.current.person.name}" style="width:400px" />
-                                    <h:outputText  value="Phone" />
-                                    <p:inputText  value="#{doctorController.current.person.phone}" style="width:400px" />
-                                    <h:outputText  value="Fax" />
-                                    <p:inputText autocomplete="off"  value="#{doctorController.current.person.fax}"  style="width:400px"/>
-                                    <h:outputText  value="Mobile" />
-                                    <p:inputText autocomplete="off" value="#{doctorController.current.person.mobile}" style="min-width: 400px;"  />
-                                    <h:outputText  value="Address" />
-                                    <p:inputText autocomplete="off" value="#{doctorController.current.person.address}" style="min-width: 400px;" />
-                                    <h:outputText  value="Code" />
-                                    <p:inputText autocomplete="off" value="#{doctorController.current.code}" style="min-width: 400px;"  />
-                                    <h:outputText value="Speciality" />
-                                    <h:selectOneListbox size="1" value="#{doctorController.current.speciality}" style="min-width: 400px;">
-                                        <f:selectItem itemLabel="Please select a speciality"/>
-                                        <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                    </h:selectOneListbox>
-                                    <h:outputText value="Registration" />
-                                    <p:inputText autocomplete="off" value="#{doctorController.current.registration}" style="min-width: 400px;"/>
-                                    <h:outputText value="Qualification" />
-                                    <p:inputText autocomplete="off"  value="#{doctorController.current.qualification}" style="min-width: 400px;"/>
-                                    <h:outputText  value="Refering Charge" />
-                                    <p:inputText autocomplete="off"  value="#{doctorController.current.charge}" style="min-width: 400px;" />
-                                    <h:outputText  value="Creater" />
-                                    <h:outputText  value="#{doctorController.current.creater.webUserPerson.name}" style="min-width: 400px;"/>
-                                    <h:outputText  value="Created At" />
-                                    <h:outputText  value="#{doctorController.current.createdAt}" >
-                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="yyyy MM dd hh:mm:ss a" ></f:convertDateTime>
-                                    </h:outputText>
-                                </h:panelGrid>
-                                <h:panelGrid id="gpDetailButtons" columns="2">
-                                    <p:commandButton id="btnSave" value="Save" ajax="false"
-                                                     action="#{doctorController.saveSelected()}" styleClass="buttons"/>
 
-                                    <p:defaultCommand target="btnSave"/>
-                                </h:panelGrid>
-                            </h:panelGrid>
-                        </p:panel>
-                    </h:panelGrid>
+
+
+
                 </p:panel>
             </h:form>
 
