Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -92,7 +92,7 @@
                     <p:panel header="Pharmacy" >
                         <h:panelGrid columns="2" styleClass="alignTop" >
                             <h:outputLabel value="Pharmacy Bill Footer" ></h:outputLabel>
-                            <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillFooter}" />
+                            <p:inputTextarea value="#{sessionController.currentPreference.pharmacyWholesaleBillTemplate}" />
                             <h:outputLabel value="Pharmacy Bill Paper" ></h:outputLabel>
                             <p:selectOneMenu value="#{sessionController.currentPreference.pharmacyBillPaperType}" >
                                 <f:selectItem itemLabel="Please Select Paper Type" />
