--- a/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
+++ b/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
@@ -12,7 +12,7 @@
             <ui:define name="admin">
                 <h:form >
                     <p:panel>
-                        <p:commandButton id="btnSave" ajax="false" value="Save" 
+                        <p:commandButton id="btnSave" ajax="false" value="Save" class="m-1"
                                          action="#{sessionController.saveUserPreferences()}" ></p:commandButton>
 
                         <p:tabView orientation="left" >
@@ -21,7 +21,7 @@
                                 <p:panel header="Pharmacy" >
                                     <h:panelGrid columns="2" styleClass="alignTop" >
                                         <h:outputLabel value="Pharmacy Bill Footer" ></h:outputLabel>
-                                        <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillFooter}" />
+                                        <p:inputTextarea value="#{sessionController.currentPreference.pharmacyWholesaleBillTemplate}" />
                                         <h:outputLabel value="Pharmacy Bill Paper" ></h:outputLabel>
                                         <p:selectOneMenu value="#{sessionController.currentPreference.pharmacyBillPaperType}" >
                                             <f:selectItem itemLabel="Please Select Paper Type" />
